# clf

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.rs
.cargo/: config.toml
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
docs/: review.1.md  review.2.md
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs
src/c/: clf-void.c  clf.c
tests/: effectiveness.rs
xbenche/: Cargo.toml
xbenche/benches/: cache_bench.rs
