[package]
name = "clf"
version = "0.1.2"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "flush the cpu cache line by __builtin_clear_cache()"
keywords = ["memory", "flush", "clear"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/clf"

[dependencies]

[build-dependencies]
cc = "1.0"
